--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -19,24 +19,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.21" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.22" />
     <PackageReference Include="CountLib" Version="1.0.2" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.3" />
     <PackageReference Include="Miki.Anilist" Version="0.5.1" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.1.1" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.2.8" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
-    <PackageReference Include="Miki.Framework" Version="1.3.2" />
     <PackageReference Include="Miki.Logging" Version="1.1.2" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Npgsql" Version="3.2.7" />
+    <PackageReference Include="Npgsql" Version="4.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.1.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
   </ItemGroup>
 
@@ -46,6 +45,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Bot.Models\Miki.Bot.Models.csproj" />
+    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
   </ItemGroup>
 
@@ -297,5 +298,4 @@
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
-
 </Project>
