--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -22,7 +22,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.110.51" />
     <PackageReference Include="DogStatsD-CSharp-Client" Version="4.0.1" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Lindhart.Analyser.MissingAwaitWarning" Version="1.2.0" />
@@ -33,17 +32,17 @@
     </PackageReference>
 
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
-    <PackageReference Include="Miki.Anilist" Version="0.6.1" />
-    <PackageReference Include="Miki.BunnyCDN" Version="0.1.1" />
+    <PackageReference Include="Miki.Anilist" Version="0.6.3" />
     <PackageReference Include="Miki.Cache.InMemory" Version="1.5.0" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.5.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
     <PackageReference Include="Miki.Discord" Version="3.3.0" />
+    <PackageReference Include="Miki.Discord.Gateway" Version="3.3.11" />
     <PackageReference Include="Miki.Discord.Rest" Version="3.3.0" />
     <PackageReference Include="Miki.Dsl" Version="1.2.0" />
-    <PackageReference Include="Miki.Framework" Version="2.3.2" />
-    <PackageReference Include="Miki.Framework.Arguments" Version="2.3.1" />
+    <PackageReference Include="Miki.Framework" Version="2.3.3.1" />
+    <PackageReference Include="Miki.Framework.Arguments" Version="2.3.2" />
     <PackageReference Include="Miki.Framework.Commands" Version="2.3.1.1" />
     <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.3.1" />
     <PackageReference Include="Miki.Functional" Version="0.1.3" />
@@ -52,10 +51,10 @@
     <PackageReference Include="MiScript" Version="0.1.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Nice.Snowflake" Version="1.0.3" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
     <PackageReference Include="Sentry" Version="2.1.1" />
     <PackageReference Include="Splitio-net-core" Version="6.0.3" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="Veld.Osu" Version="0.1.4" />
   </ItemGroup>
 
